[project]
name = "mazegen_anacharp_emarette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pygame-ce>=2.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sources"]

[tool.hatch.build.targets.wheel.sources]
"sources" = "mazegen_anacharp_emarette"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]
