[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pygame-ce>=2.5.7",
]

[tool.setuptools.package-dir]
"mazegen" = "sources"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mazegen" = ["resources/*"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]
